Create basic resource for eks-pod-identity-webhook

--- a/config/samples/installer_v1alpha1_ekspodidentitywebhook.yaml
+++ b/config/samples/installer_v1alpha1_ekspodidentitywebhook.yaml
@@ -1,7 +1,7 @@
 apiVersion: installer.h3poteto.dev/v1alpha1
 kind: EKSPodIdentityWebhook
 metadata:
-  name: ekspodidentitywebhook-sample
+  name: my-sample
 spec:
   issuerHost: "hogehoge.com"
   namespace: "default"
