fix: Change argument issuerHost to tokenAudience according to eks official argument

--- a/config/samples/installer_v1alpha1_ekspodidentitywebhook.yaml
+++ b/config/samples/installer_v1alpha1_ekspodidentitywebhook.yaml
@@ -3,5 +3,5 @@ kind: EKSPodIdentityWebhook
 metadata:
   name: kops-example
 spec:
-  issuerHost: "amazonaws.com"
+  tokenAudience: "amazonaws.com"
   namespace: "default"
